fixed sgr png references

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -30,15 +30,19 @@
     }
 </style>
 
+
+
+
+
 <div id="thumbnails">
-    <img src="../assets/sgr/pointCloud-20210505-234211.538.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234211.538.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234322.808.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234322.808.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234329.988.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234329.988.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234402.575.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234402.575.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234559.646.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234559.646.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234855.702.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234855.702.png"/>
-    <img src="../assets/sgr/pointCloud-20210505-234929.448.sgr" data-sgr="../assets/sgr/thumbnail-20210505-234929.448.png"/>
-    <img src="../assets/sgr/pointCloud-20210506-005138.334.sgr" data-sgr="../assets/sgr/thumbnail-20210506-005138.334.png"/>
+    <img src="../assets/sgr/thumbnail-20210505-234211.538.png" data-sgr="../assets/sgr/pointCloud-20210505-234211.538.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234322.808.png" data-sgr="../assets/sgr/pointCloud-20210505-234322.808.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234329.988.png" data-sgr="../assets/sgr/pointCloud-20210505-234329.988.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234402.575.png" data-sgr="../assets/sgr/pointCloud-20210505-234402.575.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234559.646.png" data-sgr="../assets/sgr/pointCloud-20210505-234559.646.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234855.702.png" data-sgr="../assets/sgr/pointCloud-20210505-234855.702.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210505-234929.448.png" data-sgr="../assets/sgr/pointCloud-20210505-234929.448.sgr"/>
+    <img src="../assets/sgr/thumbnail-20210506-005138.334.png" data-sgr="../assets/sgr/pointCloud-20210506-005138.334.sgr"/>
 </div>
 
 <iframe id="highscore" src="./highscore/index.html"></iframe>
