--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,15 +1,25 @@
 <style>
-    #highscore {
-        position: absolute;
-        margin: auto;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
+    #highscoreContainer {
+        position: fixed;
+        top: 16px;
+        left: 16px;
+        bottom: 16px;
+        right: 16px;
+        z-index: 100;
+        display: none;
+    }
 
+    #highscore {
+        border: none;
         width: 100%;
         height: 100%;
-        border: none;
+    }
+
+    #highscoreClose {
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        background: white;
     }
 
     #thumbnails {
@@ -23,6 +33,8 @@
         overflow-x: auto;
         overflow-y: hidden;
         white-space: nowrap;
+
+        cursor: pointer;
     }
 
     img {
@@ -40,14 +52,28 @@
     <img src="../assets/sgr/thumbnail-20210505-025103.954.png" data-sgr="../assets/sgr/pointCloud-20210505-025103.954.sgr"/>
 </div>
 
-<iframe id="highscore" src="./highscore/index.html"></iframe>
+<div id="highscoreContainer">
+    <div id="highscoreClose">x</div>
+    <iframe id="highscore" ></iframe>
+</div>
 
 <script>
+    let container = document.getElementById('highscoreContainer');
+    let close = document.getElementById('highscoreClose');
+    let frame = document.getElementById("highscore");
+
+    close.addEventListener('click', (event) => {
+        container.style.display = 'none';
+    });
 
     let images = document.getElementsByTagName('img');
     for (var i = 0; i < images.length; i++) {
+
         console.log(images[i]);
         images[i].addEventListener('click', (event) => {
+            container.style.display = 'block';
+
+            frame.src = "./highscore/index.html"
 
             let highScoreWindow = document
                 .getElementById("highscore")
