--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,12 +1,20 @@
+<head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
 <style>
+
     #highscoreContainer {
         position: fixed;
-        top: 16px;
-        left: 16px;
-        bottom: 16px;
-        right: 16px;
+        top: 1em;
+        left: 1em;
+        bottom: 1em;
+        right: 1em;
         z-index: 100;
         display: none;
+        background: black;
     }
 
     #highscore {
@@ -17,9 +25,12 @@
 
     #highscoreClose {
         position: absolute;
-        width: 16px;
-        height: 16px;
-        background: white;
+        top: 0.5em;
+        right: 0.5em;
+        width: 1.5em;
+        height: 1.5em;
+        color: white;
+        cursor: pointer;
     }
 
     #thumbnails {
@@ -42,10 +53,6 @@
     }
 </style>
 
-
-
-
-
 <div id="thumbnails">
     <img src="../assets/sgr/thumbnail-20210505-234211.538.png" data-sgr="../assets/sgr/pointCloud-20210505-234211.538.sgr"/>
     <img src="../assets/sgr/thumbnail-20210505-234322.808.png" data-sgr="../assets/sgr/pointCloud-20210505-234322.808.sgr"/>
@@ -58,8 +65,12 @@
 </div>
 
 <div id="highscoreContainer">
-    <div id="highscoreClose">x</div>
-    <iframe id="highscore" ></iframe>
+    <div id="highscoreClose">
+        <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+        </svg>
+    </div>
+    <iframe id="highscore" src="./highscore/index.html"></iframe>
 </div>
 
 <script>
@@ -74,11 +85,8 @@
     let images = document.getElementsByTagName('img');
     for (var i = 0; i < images.length; i++) {
 
-        console.log(images[i]);
         images[i].addEventListener('click', (event) => {
             container.style.display = 'block';
-
-            frame.src = "./highscore/index.html"
 
             let highScoreWindow = document
                 .getElementById("highscore")
