--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
       </div>
     </div>
   </nav>
-<div style="padding:0px;display:table;text-align:center">
-  <img src="assets/img/CS_gif_01.gif" style= "padding:0px;margin:0px;width:23%;object-fit:contain;"/>
-  <img src="assets/img/CS_gif_02.gif" style= "padding:0px;margin:0px;width:23%;object-fit:contain;"/>
-  <img src="assets/img/CS_gif_03.gif" style= "padding:0px;margin:0px;width:23%;object-fit:contain;"/>
-  <img src="assets/img/CS_gif_04.gif" style= "padding:0px;margin:0px;width:23%;object-fit:contain;"/>
-</div>
+  <div style="padding:0px;display:table;text-align:center">
+    <img src="assets/img/CS_gif_01.gif" style="padding:0px;margin:0px;width:23%;object-fit:contain;" />
+    <img src="assets/img/CS_gif_02.gif" style="padding:0px;margin:0px;width:23%;object-fit:contain;" />
+    <img src="assets/img/CS_gif_03.gif" style="padding:0px;margin:0px;width:23%;object-fit:contain;" />
+    <img src="assets/img/CS_gif_04.gif" style="padding:0px;margin:0px;width:23%;object-fit:contain;" />
+  </div>
 
   <section class="about-section text-center" style="padding-top:0vw">
     <div class="container">
@@ -61,12 +61,16 @@
           <div class="col-lg-9 mx-auto">
 
             <br>
-<div style="background-color:#222330;padding:1vw;">
+            <div style="background-color:#222330;padding:1vw;">
               <h1 style="font-size:2em;color:white" id="about">Download</h1>
-                        <a href="https://www.oculus.com/experiences/rift/2142620429171530/?locale=en_US" class="btn btn-primary my-2">Oculus Rift</a>
-                        <a href="https://store.steampowered.com/app/560410/Cosmic_Sugar_VR_Pro/" class="btn btn-primary my-2">Steam Pro</a>
-                        <a href="https://store.steampowered.com/app/559010/Cosmic_Sugar_VR/" class="btn btn-primary my-2">Steam Free</a>
-                         <a href="https://www.oculus.com/experiences/quest/3979296855448714/"class="btn btn-primary my-2">Quest App Lab</a>
+              <a href="https://www.oculus.com/experiences/rift/2142620429171530/?locale=en_US"
+                class="btn btn-primary my-2">Oculus Rift</a>
+              <a href="https://store.steampowered.com/app/560410/Cosmic_Sugar_VR_Pro/"
+                class="btn btn-primary my-2">Steam Pro</a>
+              <a href="https://store.steampowered.com/app/559010/Cosmic_Sugar_VR/" class="btn btn-primary my-2">Steam
+                Free</a>
+              <a href="https://www.oculus.com/experiences/quest/3979296855448714/" class="btn btn-primary my-2">Quest
+                App Lab</a>
             </div>
             <br>
 
@@ -150,51 +154,51 @@
 
           <div class="row text-center text-lg-left">
 
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/on9giK8IBfz9gOztPa3RovJLp4MBkW3HaYkfYdMA5-5OnlErskK5EpTT3f6vqzsOKykvj3aQs8Z1TLWPFzkSqK9-v6NZIdAuWuLaxHPB4KvSl50-TbNrXfrWxq4Sg6TQepK0YvRLTl4=w2400"
                 alt="">
             </div>
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 4-mb">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/UX9R5UdJ98ZVj6qrAPiuDfo66wfasM4F6v_QMhpc-t1KqQCyLz-Cn0l7qwjtqkdymHjRMmNXv9kZ5N6DA9NLja9DkWxLfoesZjVkxLDr_NkAWOvoQV5cbbhzeNB4euHoeIQUYCORG1c=w2400"
                 alt="">
             </div>
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 4-mb">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/pDcwKKSCkBGa2NdOFCpNz-uqxnozCVSr-bugam5k1Boc4Pf2bvBt9gfHjlLjCe9ginjzofcS10D9qavRsI9_veEw4Znghla1Ff_tffydmzJCYXeKAF-xApBEAF48KP-alYfHJ_5ZS2A=w2400"
                 alt="">
             </div>
 
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/s_klcrgCpzAOL6275qOfbGmWpnx3oX-rWgFvK8bzflwDTENC4DO1bfqw8iKrktFxb0a3iOgbDZnGKCI4kLZzB4xXjHyV-wDXqychDolYtT_22zaB_OCOsJsGmVwM9faCgiYygHJ5F5s=w2400"
                 alt="">
             </div>
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/6uANsXp3sKXhOAp9XIzwdloGWv82dOqvA0m2SS9C1xNgupYTQmLXQIt4K3bIzIOhoVhHJtw1p-kRD5wBupCmZdIVeevnLzIMzodRxv8tsK7vsmaSyg5k0Jo5Y5MWWF4buzow98p4RiI=w2400"
                 alt="">
             </div>
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/kmolQyaww0PGlqHnE3B8wDj9tn2I2kgael-SoaMW_hpU_6Q5nO3Ne0kDFqNl1c2ZtMHpL0dBezTdwtBtGTDi1bxoZDNnLnN6nhD-wXA2wYH2Ts5WPlN8GZRtyCWbuToTHQJkylMVqa4=w2400"
                 alt="">
             </div>
 
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/zO8uSYy4MaEJHRcMfxDt0R3mooqg2QZEyrT_ps-lB2Q1VM-7mdP8mnD7bN8kr7bVxXQuMjfHt2QPHE6a0Vs2YR9H6fWZMi3RzDbOKF4Y6NdRk0Xkk3g2SaVkcR65mpIWm-LdxBcGUbM=w2400"
                 alt="">
             </div>
-            <div class="col-lg-4 col-md-5 col-6">
+            <div class="col-lg-4 col-md-5 col-6 mb-4">
               <img class="img-fluid"
                 src="https://lh3.googleusercontent.com/hHEzjnd0cZ3SkGHrhVd34nDH8aZytebp1_0qirKMJopX_7kZWI4QBDKP8iBd3_8lFMXRyqDlApIVNYIvf7FtaeCVz2S8IRUlysOX6cl9VGOQK6iaPXfeyBEk3FC3f2NFA0bJ5JvGnM4=w2400"
                 alt="">
             </div>
             <div class="col-lg-4 col-md-5 col-6">
               <!-- <img class="img-fluid" src="https://lh3.googleusercontent.com/8be9DWMtR3AW7G5nnIYNY6l-oY7p8ByXLhPtDrHUWk-4rvMSFkp73KB9zrZEWSyvO-EX-hrihKJfPgLmEVTVvqs2ivz8JK8yWBYR8JMvWNMgxVduOh3CSBino5aLgMPjU3v4jlv3UXY=w2400" alt=""> -->
-              <img class="img-fluid w-100 h-100" src="./assets/sgr/thumbnail-20210506-005138.334.png"
+              <img class="img-fluid  mb-4" src="./assets/sgr/thumbnail-20210506-005138.334.png"
                 data-sgr="./assets/sgr/pointCloud-20210506-005138.334.sgr" />
             </div>
 
@@ -303,6 +307,7 @@
     for (var i = 0; i < images.length; i++) {
 
       if (images[i].dataset.sgr) {
+        images[i].style.cursor = "pointer";
         images[i].addEventListener('click', (event) => {
           container.style.display = 'block';
 
